--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -313,7 +313,7 @@
                     <div class="col-sm-3 left_side2 addcustomerSec allServiceCategorySec">
                         <div class="categoriesSec">
                             <div class="categoriesHead">
-                                <h3>Categories (2)</h3>
+                                <h3>Categories ({{CategoriesCount}})</h3>
                             </div>
                             <div class="categoryButton">
                                 <button class="pull-right btn btn-circle" id="settingCategory" title="" data-original-title="Add New Staff" ng-click="showcategorypopup = !showcategorypopup">
@@ -535,13 +535,22 @@
 
                     <!--//////////////////////////////-->
                     <div class="col-md-9 col-sm-9 categoryRightSec allServiceSec" ng-hide="EditServiceDiv">
-                      
-                            
-                            <div class="categoryButtonsDiv text-right categoryDeleteBtnDiv">
-                                <a id="deletecateBtn" ng-click="DeleteService()" class="deletecatIconBtn btn btn-default">
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                </a>
-                            </div>
+                        <!--<div class="container-fluid">-->
+                            <!--<div class="row">
+                                <div class="col-md-6 col-xs-6" >
+                                    <div class="customerDetail">
+                                        <h3>All Services</h3>
+                                    </div>
+                                </div>-->
+                                <!--<div class="col-md-6 col-xs-6">-->
+                                    <div class="categoryButtonsDiv text-right categoryDeleteBtnDiv">
+                                        <a id="deletecateBtn" ng-click="DeleteService()" class="deletecatIconBtn btn btn-default">
+                                            <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                        </a>
+                                    </div>
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
                         
                         <div class="row">
                             <div class="col-md-7">
