Changes related to New task

--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -540,7 +540,7 @@
                                         </div>
                                     </div>
                                     <div class="group_label">
-                                        <p>Your currency is set to Indian Rupee (INR ₹)</p>
+                                        <p>Your currency is set to Pound (£)</p>
                                         <div class="step3_form">
 
                                             <div class="row">
@@ -551,7 +551,8 @@
                                                     <span class="time">Time</span>
                                                 </div>
                                                 <div class="col-md-2 col-sm-2 col-xs-12">
-                                                    <span>Price (₹)</span>
+                                                    <!--<span>Price (₹)</span>-->
+                                                    <span>Price (£)</span>
                                                 </div>
                                                 <div class="col-md-2 col-sm-2 col-xs-12">
                                                     <span>Staff</span>
