--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -453,13 +453,13 @@
                                     <div class="form-group">
                                         <label class="control-label col-md-3 col-xs-3 col-sm-12">Home</label>
                                         <div class="col-md-9 col-xs-9 col-sm-12">
-                                            <input type="text" class="form-control" id="text" placeholder="Phone" name="text">
+                                            <input type="text" class="form-control" id="text" placeholder="Phone" name="text" >
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="control-label col-md-3 col-xs-3 col-sm-12">Address</label>
                                         <div class="col-md-9 col-xs-9 col-sm-12">
-                                            <input type="text" class="form-control" id="text" placeholder="Address" name="text">
+                                            <input type="text" class="form-control" id="text" placeholder="Address" name="text" ng-model="customerAddress" ng-blur="updateCustomer()">
                                         </div>
                                     </div>
 
@@ -474,7 +474,7 @@
                                                     <input type="text" class="form-control" id="text" placeholder="State" name="text">
                                                 </div>
                                                 <div class="col-md-4 textNumberDiv" style="padding-left:0;">
-                                                    <input type="text" class="form-control" id="text" placeholder="Zip" name="text">
+                                                    <input type="text" class="form-control" id="text" placeholder="Zip" name="text" ng-model="Zip" ng-blur="updateCustomer()">
                                                 </div>
                                             </div>
                                         </div>
@@ -502,7 +502,7 @@
                                             <div class="appointment_content">
                                                 <div class="appoint_text appoint_cust" ng-hide="CustomerCount==0">
                                                     <button class="pull-right btn btn-circle appointment_btn" id="createnewstaffbtn" title="" data-toggle="modal" data-target="#squarespaceModal"><i class="fa fa-plus" aria-hidden="true" ng-click="AddAppointmentPopup()"></i></button>    
-                                                    <span>{{NumberofAppointmnets}} appointment & 0 class</span><span class="dottext">.</span><span> ${{TotalCostofServices}}</span>                                                
+                                                    <span>{{NumberofAppointmnets}} appointment & 0 class</span><span class="dottext">.</span><span> £{{TotalCostofServices}}</span>                                                
                                                 </div>
                                                
                                                 <div class="modal fade appointmentPopup" id="squarespaceModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
@@ -596,7 +596,7 @@
                                                                                 <div class="col-sm-8">
                                                                                     <div class="row">
                                                                                         <div class="col-md-6 dateTimeDiv costField">
-                                                                                            <span class="calendarOk">$</span>
+                                                                                            <span class="calendarOk">£</span>
                                                                                             <input type="text" class="appt_cost form-control" placeholder="10" ng-model="price" value="">
                                                                                         </div>
                                                                                         <div class="col-md-6 dateTimeDiv costMinField">
@@ -621,7 +621,7 @@
                                                                                 <div class="col-sm-8 dateTimeDiv">
                                                                                     <span class="glyphicon glyphicon-ok calendarOk"></span><!--<input type="text" class="form-control datepickerBox" ng-model="datatime" placeholder="Fri, May 12" id="datetimepicker4" />-->
                                                                                     <!--<input datetime-picker ng-model="selecteddate" date-disabled="disabled(date, mode)" disable-weekends="true"  class="form-control datepickerBox"  date-format="EEE, MMM d" size="30" date-only   />-->
-                                                                                    <input type="text" class="form-control calendarBox" datepicker-popup="EEE, MMM d" ng-model="dt" open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-change="ChangeDate()" name='theDate' ng-required="true"  />
+                                                                                    <input type="text" class="form-control calendarBox" datepicker-popup="EEE, MMM d" ng-model="dt" open="opened" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-change="ChangeDate()" ng-click="SetDatePicker()" name='theDate' ng-required="true"  />
                                                                                     
                                                                                     <div class="selectDropdown">
                                                                                         <select class="select_btn dateTimeSelect"  ng-model="timeoption" name="timeoption" ng-init="timeoption='8:00 AM'">
@@ -747,7 +747,7 @@
                                                                                 <div class="col-sm-8">
                                                                                     <div class="row">
                                                                                         <div class="col-md-6 dateTimeDiv costField">
-                                                                                            <span class="calendarOk">$</span>
+                                                                                            <span class="calendarOk">£</span>
                                                                                             <input type="text" class="appt_cost form-control" placeholder="10" ng-model="price" value="">
                                                                                         </div>
                                                                                         <div class="col-md-6 dateTimeDiv costMinField">
@@ -832,7 +832,7 @@
                                                                 </div>
                                                                 <div class="media-body appointDate">
                                                                     <h4 class="media-heading">{{item.StartTime | date :'EEE MMM d, y'}}</h4>
-                                                                    <p>{{item.EmployeeName}} <span class="dotSplitter">.</span> {{item.ServiceName}} <span class="dotSplitter">.</span> {{item.DurationInMinutes}} min <span class="dotSplitter">.</span> {{item.Cost | currency : undefined : 0}}</p>
+                                                                    <p>{{item.EmployeeName}} <span class="dotSplitter">.</span> {{item.ServiceName}} <span class="dotSplitter">.</span> {{item.DurationInMinutes}} min <span class="dotSplitter">.</span> {{item.Cost | currency : '£' : 0}}</p>
                                                                 </div>
                                                             </div>
 
@@ -866,7 +866,7 @@
                                                                             <span>{{AppointmentService}}</span>
                                                                         </li>
                                                                         <li>
-                                                                            <label>Cost $</label>
+                                                                            <label>Cost £</label>
                                                                             <span>{{AppointmentServiceCost}}</span>
                                                                         </li>
                                                                         <li>
