--- a/AngularMvcProject/App/View/Setting/Services.html
+++ b/AngularMvcProject/App/View/Setting/Services.html
@@ -437,7 +437,7 @@
 
                                     <form class="form-horizontal customerDetail" name="servicedetailform">
                                         <div class="form-group">
-                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (₹)</label>
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (£)</label>
                                             <div class="col-md-8 col-sm-8 col-xs-12">
                                                 <input type="text" class="form-control" id="text" placeholder="Cost for the Service" name="text" ng-model="ServiceCost">
                                             </div>
@@ -607,7 +607,8 @@
 
                                     <form class="form-horizontal customerDetail">
                                         <div class="form-group">
-                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (₹)</label>
+                                            <!--<label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (₹)</label>-->
+                                            <label class="control-label col-md-4 col-sm-4 col-xs-12">Service Cost (£)</label>
                                             <div class="col-md-8 col-sm-8 col-xs-12">
                                                 <input type="text" class="form-control" id="text" placeholder="Cost for the Service" name="text" ng-model="ServiceCost" ng-blur="updateService()">
                                             </div>
