Sign In Integration

--- a/AngularMvcProject/App/View/SignUp/SignUp.html
+++ b/AngularMvcProject/App/View/SignUp/SignUp.html
@@ -23,10 +23,11 @@
                             </div>
 
                             <button type="submit" class="btn btn-default submit_btn">Create My Account!</button>
+                            <br>
+                            <button class="btn btn-default submit_btn" ng-click="signin()">Sign In</button>
                         </form>
                     </div>
                     <img src="/Content/Assets/images/cloud.png" alt="Cloud" class="left_img">
-                   
                 </div>
                 <!--@*<div style=" width 100px; text-align center; top 0; position absolute; left 45%; right 50%; z-index 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>*@-->
                 <div style="width:100px; text-align:center; top:0; position:absolute; left:45%; right:50%; z-index:999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>
