--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -166,15 +166,15 @@
                                 <label class="dashboardLable">Appointments</label>
                             </li>
                             <li class="dashboardLi">
-                                <span class="dashboardCount">₹0</span>
+                                <span class="dashboardCount">£0</span>
                                 <label class="dashboardLable">Confirmed Revenue</label>
                             </li>
                             <li class="dashboardLi">
-                                <span class="dashboardCount">₹0</span>
+                                <span class="dashboardCount">£0</span>
                                 <label class="dashboardLable">Projected Revenue</label>
                             </li>
                             <li class="dashboardLi">
-                                <span class="dashboardCount">₹0</span>
+                                <span class="dashboardCount">£0</span>
                                 <label class="dashboardLable">Total Estimated</label>
                             </li>
                         </ul>
