--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -618,7 +618,7 @@
                                                     </div>
                                                     <div class="col-md-2 col-sm-2 col-xs-12">
                                                         <div class="form-group">
-                                                            <input type="text" class="form-control" id="servicePrice" ng-model="servicePrice" placeholder="(₹) 0" name="servicePrice" required>
+                                                            <input type="text" class="form-control" id="servicePrice" ng-model="servicePrice" placeholder="(£) 0" name="servicePrice" required>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-4 col-sm-4 col-xs-12">
