--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -336,7 +336,7 @@
                                                             <button id="addcategoryBtn" type="submit" class="btn  add_category_btn addCustomerbtn">Add Staff</button>
                                                         </div>
                                                         <div class="col-md-6 col-xs-6">
-                                                            <button id="cancelBtn" class="btn btn-default cateCancelbtn" ng-click="IsVisibleAddNewStaffPopUp=false">Cancel</button>
+                                                            <button id="cancelBtn" class="btn btn-default cateCancelbtn" ng-click="StaffCancel(AddStaffForm)">Cancel</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -402,7 +402,7 @@
                                                                 </span>
                                                             </div>
                                                             <span class="uploadImageIcon staffIconImg">
-                                                                <i class="fa fa-camera" aria-hidden="true"></i>
+                                                                <i class="fa fa-camera" aria-hidden="true" ></i>
                                                             </span>
                                                         </label>
                                                         <div class="col-md-6 col-sm-12 col-xs-12">
